# TECFlix

./: README.md
TECflix/: CMakeLists.txt  configfile  guiIncludes.h  main.cpp  ventPrincipal.cpp  ventPrincipal.h
TECflix/csv/: .~lock.movie_metadata.csv#  movie_metadata.csv
TECflix/estructuras/: LinkedList.h  Node.h
TECflix/html/: LinkedList_8h_source.html  Movie_8h_source.html  Node_8h_source.html  annotated.html  classLinkedList-members.html  classLinkedList.html  classMovie-members.html  classMovie.html  classNode-members.html  classNode.html  classes.html  classio_1_1ByteSourceBase-members.html  classio_1_1ByteSourceBase.html  classio_1_1ByteSourceBase__inherit__graph.dot  classio_1_1CSVReader-members.html  classio_1_1CSVReader.html  classio_1_1LineReader-members.html  classio_1_1LineReader.html  classio_1_1detail_1_1AsynchronousReader-members.html  classio_1_1detail_1_1AsynchronousReader.html  classio_1_1detail_1_1NonOwningIStreamByteSource-members.html  classio_1_1detail_1_1NonOwningIStreamByteSource.html  classio_1_1detail_1_1NonOwningIStreamByteSource__coll__graph.dot  classio_1_1detail_1_1NonOwningIStreamByteSource__inherit__graph.dot  classio_1_1detail_1_1NonOwningStringByteSource-members.html  classio_1_1detail_1_1NonOwningStringByteSource.html  classio_1_1detail_1_1NonOwningStringByteSource__coll__graph.dot  classio_1_1detail_1_1NonOwningStringByteSource__inherit__graph.dot  classio_1_1detail_1_1OwningStdIOByteSourceBase-members.html  classio_1_1detail_1_1OwningStdIOByteSourceBase.html  classio_1_1detail_1_1OwningStdIOByteSourceBase__coll__graph.dot  (+146 more)
(+120 files in other folders)
